add ruby id, javascript id, and csharp id to styles sheet as display none

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,14 @@ h2 {
   padding-bottom: 50px;
 }
 
+#ruby {
+  display: none;
+}
+
+#javascript {
+  display: none;
+}
+
+#csharp {
+  display: none;
+}
