add ruby, python, and c# images to html

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,12 +10,15 @@ h2 {
 
 #ruby {
   display: none;
+  text-align: center;
 }
 
 #javascript {
   display: none;
+  text-align: center;
 }
 
 #csharp {
   display: none;
+  text-align: center;
 }
