add then delete div class card. Now quiz results won't show. Troubleshoot reason why but other than card, nothing else was changed

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,14 @@ h2 {
   padding-bottom: 50px;
 }
 
+.btn {
+  margin-top: 20px;
+}
+
+.bold {
+  font-weight:bold;
+}
+
 #ruby {
   display: none;
   text-align: center;
