--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,25 @@
 h1 {
   text-align:center;
+  text-decoration: underline;
   padding-block: 50px;
 }
 
 h2 {
   text-align:center;
   padding-bottom: 50px;
+}
+
+.card {
+  align-content: center;
+  margin-bottom: 300px;
+  border-width: 15px;
+  width:fit-content;
+}
+
+.card-header {
+  margin-bottom: 20px;
+  width: 50%;
+  
 }
 
 .btn {
@@ -19,14 +33,17 @@ h2 {
 #ruby {
   display: none;
   text-align: center;
+  margin-top: 50px;
 }
 
 #javascript {
   display: none;
   text-align: center;
+  margin-top: 50px;
 }
 
 #csharp {
   display: none;
   text-align: center;
+  margin-top: 50px;
 }
